# RefactorAI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
refactor_ai/: main.py
refactor_ai/configuration_manager/: cli_ui.py  providers.json  secrets_manager.py
refactor_ai/enhancer/: terminal_controls.py
refactor_ai/enhancer/code_enhancer/: code_enhancer.py  system_prompt.json
refactor_ai/github_manager/: __init__.py  branch_ops.py  commit_ops.py  create_ops.py  delete_ops.py  github_terminal_controls.py  pr_ops.py  repo_files_loader.py  repo_ops.py  update_ops.py  utils.py
refactor_ai/help_docs/: enhancer_help.py  github_help.py  help_utils.py
